<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sh.pritesh.rubyconfindia.confsched.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/root_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notification_group"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_large"/>

            </RelativeLayout>

            <sh.pritesh.rubyconfindia.confsched.widget.SettingSwitchRowView
                android:id="@+id/notification_switch_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingDescription="@string/settings_notification_description"
                app:settingTitle="@string/settings_notification" />

            <View style="@style/Border" />

            <sh.pritesh.rubyconfindia.confsched.widget.SettingSwitchRowView
                android:id="@+id/heads_up_switch_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:settingDescription="@string/settings_heads_up_notification_description"
                app:settingTitle="@string/settings_heads_up_notification" />

            <View android:id="@+id/heads_up_border" style="@style/Border" android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</layout>
